--- a/study-backend/package.json
+++ b/study-backend/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
+    "joi": "^17.3.0",
     "koa": "^2.13.0",
     "mongoose": "^5.10.14"
   },
