create auth router&posts router

--- a/study-backend/package.json
+++ b/study-backend/package.json
@@ -8,6 +8,8 @@
     "esm": "^3.2.25",
     "joi": "^17.3.0",
     "koa": "^2.13.0",
+    "koa-bodyparser": "^4.3.0",
+    "koa-router": "^10.0.0",
     "mongoose": "^5.10.14"
   },
   "devDependencies": {
@@ -18,6 +20,6 @@
   },
   "scripts": {
     "start": "node -r esm src",
-    "dev": "nodemon --watch src/ -r esm src"
+    "dev": "nodemon --watch src/ -r esm src/index.js"
   }
 }
