--- a/study-backend/.eslintrc.json
+++ b/study-backend/.eslintrc.json
@@ -1,7 +1,8 @@
 {
     "env": {
         "es2021": true,
-        "node": true
+        "node": true,
+        "es6": true,
     },
     "extends": ["eslint:recommended", "prettier"],
     "parserOptions": {
