--- a/study-backend/package.json
+++ b/study-backend/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "joi": "^17.3.0",
@@ -19,7 +21,7 @@
     "prettier": "^2.1.2"
   },
   "scripts": {
-    "start": "node -r esm src",
-    "dev": "nodemon --watch src/ -r esm src/index.js"
+    "start": "cross-env NODE_PATH=src node -r esm src",
+    "start:dev": "cross-env NODE_PATH=src nodemon --watch src/ -r esm src/index.js"
   }
 }
