frontend register/login

--- a/study-frontend/.eslintrc
+++ b/study-frontend/.eslintrc
@@ -22,6 +22,7 @@
         "react"
     ],
     "rules": {
+        "no-unused-vars": "off",
         "react/jsx-filename-extension": "off",
         "react/jsx-uses-react": "off",
         "react/react-in-jsx-scope": "off"
