--- a/study-frontend/package.json
+++ b/study-frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "autoprefixer": "^9",
+    "axios": "^0.21.1",
     "postcss": "^7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -38,5 +39,6 @@
   "devDependencies": {
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^7.1.0"
-  }
+  },
+  "proxy": "http://localhost:4000/api"
 }
